# mnome

./: .clang-format  .clang-tidy  .cmake-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  fix.sh  meson.build
cmake/: CPM.cmake  cli.cmake  doctest.cmake  miniaudio.cmake
cmake/miniaudio/: CMakeLists.txt
src/: AudioSignal.cpp  AudioSignal.hpp  BeatPlayer.cpp  BeatPlayer.hpp  Mnome.cpp  Mnome.hpp  Repl.cpp  Repl.hpp  main.cpp
subprojects/: cli.wrap  doctest.wrap  miniaudio.wrap
subprojects/packagefiles/cli/: meson.build
subprojects/packagefiles/miniaudio/: meson.build
test/: AudioSignalTest.cpp  MnomeTest.cpp  ReplTest.cpp
